# cmake-modules

./: .gitignore  CMakeLists.txt
.devcontainer/: Dockerfile
drawing-app/: CMakeLists.txt  DrawingApp.cpp  Factory.cxx  Shapes-Point.cxx  Shapes-Rectangle.cxx  Shapes-Square.cxx  std.cxx
implementation-units/: CMakeLists.txt  eshop.cxx  eshop_io_impl.cpp  eshop_main.cpp
module-partitions/: CMakeLists.txt  eshop_customer.cxx  eshop_io_impl.cpp  eshop_order.cxx
primes/: CMakeLists.txt  primes.cxx  primes_main.cpp
